fix: blur keyboard on mobile devices after first message

--- a/client/src/pages/home.module.css
+++ b/client/src/pages/home.module.css
@@ -10,30 +10,15 @@
   }
 }
 
-.navbar {
-  position: fixed;
-  display: flex;
-  justify-content: end;
-  top: 0;
-  z-index: 20;
-  width: 100%;
-  padding: 1.5rem 2rem;
-}
-
 .home {
-	position: relative;
-	height: 100%;
-}
-
-.homeContent {
   display: flex;
   flex-direction: column;
   height: 100%;
 }
 
 .startChatInterface {
-	display: flex;
-	flex-direction: column;
-	gap: var(--mantine-spacing-xs);
-	flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  gap: var(--mantine-spacing-xs);
+  flex-grow: 1;
 }
